fixed header cutoff

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -16,7 +16,7 @@
       position: relative;
       .logo {
         width: 158px;
-        height: 16.2px;
+        height: 17px;
         background-image: url('../img/logo.svg');
         display: inline-block;
         position: absolute;
